overflow fixed

--- a/components/global.scss
+++ b/components/global.scss
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    box-sizing: content-box;
 }
 a{
     text-decoration: none;
@@ -14,6 +14,8 @@ body{
     width: 100vw;
     background-color: $gray-200;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
+
 }
 button{
     font-family: 'Roboto', sans-serif
